--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: <your web page title> # EDIT: Fill this in
-description: <description of your web page> # EDIT: Fill this in
+title: My Website # EDIT: Fill this in
+description: A website made for a workshop # EDIT: Fill this in
 
 remote_theme: pmarsceill/just-the-docs # Borrowing the theme from https://github.com/pmarsceill/just-the-docs
-github_repo_url: "https://github.com/scds/github-pages" # EDIT: REPLACE WITH THE URL TO YOUR WEBPAGE
+github_repo_url: "https://github.com/Multipixels/getting-started-github" # EDIT: REPLACE WITH THE URL TO YOUR WEBPAGE
 
 # Heading anchor links appear on hover over h1-h6 tags in page content
 # allowing users to deep link to a particular heading on a page. (true or false)
